--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -14,3 +14,54 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.node {
+  background-color: lightblue;
+  border-style: solid;
+  border-width: 1px;
+}
+.nodeText{
+  font: 10px sans-serif;
+}
+.marriageNode {
+  background-color: black;
+  border-radius: 50%;
+}
+body {
+  font: 10px sans-serif;
+}
+.linage {
+  fill: none;
+  stroke: #000;
+}
+.marriage {
+  fill: none;
+  stroke: black;
+}
+.marriageNode {
+  background-color: red;
+  border-radius: 50%;
+}
+.man {
+  background-color: lightblue;
+  border-style: solid;
+  border-width: 1px;
+  box-sizing: border-box;
+}
+.woman {
+  background-color: pink;
+  border-style: solid;
+  border-width: 1px;
+  box-sizing: border-box;
+}
+.emphasis{
+  font-style: italic;
+}
+p {
+padding:0;
+margin:0;
+}
+svg {
+border-style: solid;
+border-width: 1px;
+}
